<resources>
    <string name="app_name">ZohoKart</string>

    <string name="hello_world">Hello world!</string>
    <string name="product_shared_transition">product transition</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up_string"><u>New to Zohokart? Sign up</u></string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="sign_in_string"><u>Have an account? Sign in</u></string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_wishlist">WishlistActivity</string>
    <string name="title_activity_profile">ProdileActivity</string>
    <string-array name="cart_types">
        <item>Visa</item>
        <item>Mastercard</item>
    </string-array>
    <string name="title_activity_order_summary">OrderSummaryActivity</string>
    <string name="view_saved_card"><u>Select saved card</u></string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="remove">REMOVE</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="description">Color and storage</string>
    <string name="title">Title</string>
    <string name="product_thumbnail">thumbnail of product.</string>
    <string name="quantity">Quantity</string>
    <string name="colon_separator">:</string>
    <string name="rs_tag">Rs. </string>
    <string name="items">Items</string>
    <string name="number_of_products_placeholder">T</string>
    <string name="ordered_date">ordered date</string>
    <string name="total_price">Total Price</string>
    <string name="order_status">Order Status</string>
    <string name="navigation_image">navigation item image</string>
    <string name="wishlist">Wishlist</string>
    <string name="wishlist_empty">No Products in Wishlist</string>
    <string name="continue_shopping">Shop Now</string>
    <string name="search_empty">No matching products</string>
    <string name="enter_card_details">Enter card details</string>
    <string name="card_number">Card Number</string>
    <string name="card_type">Type</string>
    <string name="name_on_card">Name on Card</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="products_empty">No products available</string>
    <string name="warranty">Warranty</string>
    <string name="specification">Specifications</string>
    <string name="buy_now">BUY NOW</string>
    <string name="payment_options">Payment Options</string>
    <string name="cod">Cash On Delivery</string>
    <string name="credit_card">Credit Card</string>
    <string name="no_saved_cards">No saved cards available</string>
    <string name="use_new_card">Use new card</string>
    <string name="CVV">CVV</string>
    <string name="proceed">Proceed</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order Id</string>
    <string name="ordered_products">Ordered Products</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="total">Total</string>
    <string name="products">Products</string>
    <string name="make_payment">Make Payment</string>
    <string name="home">HOME</string>
    <string name="top_rated">Top Rated</string>
    <string name="view_all">View all</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="recently_viewed_empty">No recently viewed products.</string>
    <string name="apply_filter">APPLY</string>
    <string name="cart">cart</string>
    <string name="summary">Summary</string>
    <string name="grand_total">Grand Total</string>
    <string name="cart_empty">No Products in Cart</string>
    <string name="checkout">CHECKOUT</string>
    <string name="inclusive_of_all_charge">Inclusive of all charges</string>
    <string name="multiplier">X</string>
    <string name="move_to_cart">MOVE TO</string>
    <string name="logout">Logout</string>
    <string name="zohokart">ZohoKart</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="show_calendar">Show Calendar</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="register">Register</string>
    <string name="account_information">Account information</string>
    <string name="email_address">Email Address</string>
    <string name="my_orders">My Orders</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="add_new_card">Add new card</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="add_items">Want to add items?</string>
    <string name="expected_delivery_date">Expected Delivery Date</string>
</resources>
