<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="130dp"
    android:layout_height="210dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:background="@color/white_bg">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/product_thumbnail"
        android:src="@mipmap/ic_phone_iphone_black_24dp"
        android:id="@+id/display_image"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/title"
        android:textSize="12sp"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/description"
        android:textSize="10sp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/price"
        android:textSize="12sp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"/>

</LinearLayout>