<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muhil.zohokart.activities.CartActivity"
    android:background="@color/fragment_background_color">

    <ProgressBar
        android:id="@+id/cart_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/cart_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:text="@string/cart"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/cart_list_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="italic"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cart_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/summary"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#9E9E9E"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="@string/grand_total"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/grand_total_rs_tag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rs_tag"
                                android:paddingStart="8dp"
                                android:paddingEnd="8dp"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                android:textColor="#F44336"/>
                            <TextView
                                android:id="@+id/grand_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                android:text="@string/total_price"
                                android:textColor="#F44336"/>

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/inclusive_of_all_charge"/>

                    </LinearLayout>

                </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/checkout_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkout"
                    android:textColor="#FFF"
                    android:background="@drawable/rounded_button"/>

            </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/empty_cart_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#E0E0E0"
        android:visibility="gone">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/fa_opencart_256_0_616161_none"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            android:text="@string/cart_empty"
            android:textColor="#424242"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_items"/>
        <Button
            android:id="@+id/continue_shopping_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/continue_shopping"
            android:textColor="#FFF"
            android:background="@drawable/rounded_button" />

    </LinearLayout>

</RelativeLayout>

